# pantera

./: .Dockerignore  .dockerignore  .env.dev  .gitignore  .testcontainers.properties  ADAPTERS_CODE_REVIEW.md  AGENTS.md  ALL_ADAPTERS_FIXES_COMPLETE.md  ALL_FIXES_COMPLETE.md  CHANGELOG-v2.2.0.md  CHANGELOG.md  CLAUDE.md  CODE_STANDARDS.md  COMPOSER_FIX_2025-10-23.md  COMPREHENSIVE_CODE_REVIEW.md  CONTRIBUTING.md  CachedProxySlice.java  Dockerfile.dev  FIXES_2025-10-23.md  FIXES_IMPLEMENTATION_STATUS.md  GRADLE_GO_IMPLEMENTATION_SUMMARY.md  HTTP_CLIENT_VERTX_CODE_REVIEW.md  HTTP_CLIENT_VERTX_FIXES_COMPLETE.md  IMPLEMENTATION_GUIDE_REMAINING_FIXES.md  LICENSE.header  LICENSE.txt  Makefile  PROXY_CACHE_DEBUG.md  README.md  build-and-deploy.sh  bump-version.sh  docker-compose.dev.yaml  fields.csv  generate-pom-checksums.sh  jattach-profiler.sh  performance-scale-audit-report.md  pom.xml  rebuild.sh  review-v2.2.0.md
.continue/rules/: concise-documentation.md
.github/workflows/: ci.yml  perf-baseline.yml  (+2 more)
.wiki/: Configuration-Group-Cache.md  Configuration-HA.md  Configuration-Health.md  Configuration-Metadata.md  Configuration-Metrics.md  Configuration-Repository.md  Configuration.md  Home.md  Rest-api.md  _Sidebar.md
agents/: HTTP_LEAK_PATTERNS_REVIEW.md  PERFORMANCE_ISSUES_ANALYSIS.md  npm-proxy-complete-analysis.md  npm-proxy-deduplication-analysis.md
analysis/: 00-mental-model.md  01-reproduction.md  02-diff-triage.md  03-findings.md  04-rebuild-plan.md  05-perf-harness.md
artipie-backfill/: README.md  dependency-reduced-pom.xml  pom.xml
artipie-core/: pom.xml
artipie-import-cli/: Cargo.toml  README.md  pom.xml
artipie-import-cli-rust/: .gitignore  BUILD_SUCCESS.md  Cargo.toml  DEPLOY.sh  Makefile  PRODUCTION_GUIDE.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  TESTING.md  build.sh
artipie-import-cli/src/: main.rs
artipie-import-cli/src/main/java/com/artipie/importer/cli/: ArtifactMetadata.java  ArtipieImportCli.java  ConsoleProgress.java  FailureTracker.java  ImporterConfig.java  ImporterRunner.java  MetadataHeuristics.java  ProgressBodyPublisher.java  ProgressTracker.java  SummaryTracker.java  TaskScanner.java  UploadTask.java
artipie-import-cli/src/test/java/com/artipie/importer/cli/: MetadataHeuristicsTest.java  ProgressTrackerTest.java  SummaryTrackerTest.java  TaskScannerTest.java
artipie-main/: .factorypath  .testcontainers.properties  Dockerfile  Dockerfile-ubuntu  METRICS.md  NPM_GROUP_AUTH.md  build-image.sh  pom.xml
artipie-main/docker-compose/artipie/artifacts/python/: .gitignore  README.md  pyproject.toml
artipie-main/docker-compose/artipie/artifacts/python/src/hello/: __init__.py  cli.py
artipie-ui/: Dockerfile  README.md  docker-entrypoint.sh  index.html  package-lock.json  package.json
asto/: FINAL_IMPLEMENTATION_SUMMARY.md  PHASE1_CRITICAL_FIXES.md  QUICK_START_GUIDE.md  S3_RESOURCE_LEAK_FIX.md  USAGE_ANALYSIS_AND_FIXES.md  pom.xml
benchmark/: README.md  bench.sh  docker-compose-bench.yml
build-tools/: pom.xml
composer-adapter/: pom.xml
conan-adapter/: pom.xml
conda-adapter/: pom.xml
debian-adapter/: pom.xml
debug/: 2025-12-03T12_15_46_036Z-debug-0.txt  error.txt
docker-adapter/: pom.xml
docker-compose/: apm-config.env
docs/: API_ROUTING.md  ARTIPIE_JVM_OPTIMIZATION.md  CHANGELOG-AUTO1.md  CHANGELOG.md  DEVELOPER_GUIDE.md  DISK_CACHE_CLEANUP_CONFIG.md  ECS_JSON_QUICK_REFERENCE.md  ENTERPRISE_PROXY.md  ENVIRONMENT_VARIABLES.md  LOGGING_CONFIGURATION.md  NPM_CLI_COMPATIBILITY.md  OKTA_OIDC_INTEGRATION.md  README.md  RELEASE-NOTES-v1.21.0.md  USER_GUIDE.md  configuration-reference.md  cooldown-metadata-filtering.md  developer-guide.md  frontend-developer-guide.md  global-import-api.md  index.md  rest-api-reference.md  s3-high-perf-design.md  s3-runbook.md
files-adapter/: pom.xml
gem-adapter/: pom.xml
go-adapter/: GO_PROXY_README.md  pom.xml
gradle-adapter/: IMPLEMENTATION_SUMMARY.md  README.md  pom.xml
helm-adapter/: pom.xml
hexpm-adapter/: pom.xml
http-client/: pom.xml
maven-adapter/: pom.xml
npm-adapter/: ARTIPIE_AUTH_INTEGRATION.md  AUDIT_IMPLEMENTATION.md  AUTH_SEARCH_INTEGRATION.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  JWT_AUTHENTICATION_IMPLEMENTATION.md  NPM_AUDIT_TROUBLESHOOTING.md  PROXY_GROUP_SUPPORT.md  pom.xml
nuget-adapter/: pom.xml
pantera-backfill/: dependency-reduced-pom.xml  pom.xml
pantera-core/: pom.xml
pantera-import-cli/: build.sh
pantera-main/: .factorypath  Dockerfile  Dockerfile-tests  Dockerfile-ubuntu  REPOSITORY_METRICS_IMPLEMENTATION.md  pom.xml
pantera-main/docker-compose/pantera/artifacts/python-uv/: README.md  pyproject.toml  test.sh
pantera-main/docker-compose/pantera/artifacts/python-uv/src/pantera_pypi_uv_test/: __init__.py
pantera-main/docker-compose/pantera/artifacts/python-uv/tests/: test_pep691.py
pantera-storage/: pom.xml
pantera-ui/: .npmrc  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
performance/: .env.C1  .env.C2  .env.C3  Makefile  README.md  docker-compose-scaling.yml  pantera-config.yml.template  seed.sql
pypi-adapter/: pom.xml
rpm-adapter/: pom.xml
scripts/: fix-maven-metadata-timestamps.sh  pantera-cache-integrity-audit.sh  perf-benchmark.sh  perf-compare.sh  perf-gate-check.sh  release-gate.sh
test_images/: Dockerfile.conda  Dockerfile.docker  Dockerfile.maven  build.sh  upload.sh
vertx-server/: pom.xml
(+4214 files in other folders)
